# serve_dir

./: .gitignore  pyproject.toml
.github/workflows/: across.yml  build.yml  publish.yml
serve_dir/: __main__.py  main.py  segments.py  server.py
tests/: run_tests_with_coverage.sh  test_features.py  test_serve_dir.py
