[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "serve_dir.__init__.__version__"}

[project]
name = "serve_dir"
dynamic = ["version"]
description = ""
authors = [
    {name = "Jet-Logic"},
]

[tool.black]
line-length = 127